# Aframp-backend

./: .gitignore  APPEND_ONLY_AUDIT_LEDGER.md  COMMIT_MESSAGE.md  Cargo.toml  GLOBAL_DISTRIBUTED_API.md  IMPLEMENTATION_COMPLETE.md  KYA_COMPLETION_SUMMARY.md  KYA_IMPLEMENTATION.md  KYA_QUICK_START.md  KYA_TEST_RESULTS.md  MERCHANT_GATEWAY_README.md  POS_IMPLEMENTATION_SUMMARY.md  POS_QR_PAYMENT_SYSTEM.md  README.md  TREASURY_ALLOCATION_PR.md  dist-test.sh  lighthouserc.json  test_kya_structure.ps1  test_kya_structure.sh
.sqlx/: query-000e3f54bba4b1e4841d4aa6192d4ca6941aeaad703df4a654110af745aaf6a3.json  query-00ccd542764ad61951a55d1bd91b779af2d6b60605d9d48f62af65e1bc836c3a.json  query-017f51a51866690d5bcee592452976d2f3eb483e14f551570fb71e749e126b6c.json  query-021877b89dcc0db0eae08c14e2b0b3fd7f96ccaea6cdfcade7b297b0934a7ab0.json  query-02cbbf48f944f517f449fcbe35af266296289e23ed94356e3da8e493a12f1384.json  query-0356c6c31cccaec4fd4294dd123ed4c5a4520f954f91d40779397419839939e0.json  query-04484e70fe84f2d589844b57e8560e1ff5ed79aa7f38b29f077306b0ed8bec75.json  query-045cf18f9df17c71aef3bc4ee3061f1dd23a00fe2771e7da3c398408a1e93183.json  query-04c1f8d7076be5e86d992d13fc838036ae75461b67f91f07434b669e21b982c4.json  query-04de1924c16ebdd14fc4acc5e0e32a30763311e426eefc68fc6f3946c155d055.json  query-0501f061490fe7f348423c74fe2027e02fc1f58f97d9fbca7b7b10c8576a7ed5.json  query-051ef5151fcc80d1f121a2e769cad57b800d31cc67e16a85e5b715e00af829db.json  query-05885c181766d4209804623263983639a353ad08e0d8272857f511814732d88c.json  query-059795ca5a744a13c3e8b4c4cebb5d0e38b655858c5d9b95498e4f6b9fc1137d.json  query-05b420ed53ffd588cffab64809ff1b895d833f2c4ea048e773795f52b317a21b.json  query-061b668de55bb1bed2859a40789cbd0586b89a73ecde601e13e06cd114ef5894.json  query-06300e4e8a8c823668a0e2fc86c27f22b08a090c91a8f0073dd99431de55d796.json  query-06726111dc10edfb58a7a0f94b659a6c653bff5d46fa09a3bab467c8b8a72552.json  query-06914c40e7d212c6e35cb241b1b096f677485e30ceecfa661c6a92a92936c1d8.json  query-06ed74af32fd7f05f0e52b088b932a5b196ad247d12edbf3e1e062333894e2bf.json  query-06f2a3718d92665652bdd5c83094634637d452bbaedd1eda409bf7b3e8503388.json  query-07020f33db5764064b5a2fee610d2b6acbca85776c239854579929b1dad2274e.json  query-0786f4d6845b7aa9512cdf29ba38f37f14095c1e10f01b10e616c24b1d71b2b0.json  query-08309d390c4ce3c9f6ede925fc1fa1a3ee9c10ad87a1a8a8fd613184d8a29f50.json  query-085a66ccb86fda256339333369dfc6651737ad313bcd395ccc82f2302b034f4a.json  query-0875b967f9af2a0f1c6d9d4b3380e546852efe5ed291c5a05557d434a4843b41.json  query-09b105fe13901410cbe5f54ad70a20791795f3889c9212c9802c687d072e85a4.json  query-09f9bbd798d0528c573e90305d43d7f7c4e558cc0c054284d18934870366cbe0.json  query-0aa0912fd26e9816466c5da9b04258b72ffdbbc1386374e9dd5f52a2242e3155.json  query-0ac078c1aa1b6bf609c00334fbe68736be2f17a39ed8c40e82d823797cf402bd.json  query-0ae10c0722d8d99c7e9b36307fe4a9d293665be98a7e720eefaa2d02200ecabb.json  query-0b0cef80113083708e56b029c58a277d684da6ea3411a67bb59209dd9e7bf72a.json  query-0b40f0aa12479c4955a5d9fcf180f0d4f3379667fb9cdfe207fbfa946a6e1507.json  query-0b83a6b5608f8ed9c93de566c2a2d4046ca1c0e053facc40a0571ccb0a1b342a.json  query-0ba4bc09205ba4ab56ba545843f68438b6162b01ce5ee0a7c7e228ffa8ed66a0.json  query-0c5a1f12a780ab6f85247bde60f26ce5526b81da8a535adc60fa2aef02e61a74.json  query-0c9e613ffbce4eb1fec8ec01fffac999bbf149ecb5191fe551f6d3ca5f5a27a3.json  query-0d7d85acee1820069340907a906338f4b70605e1597ffb4ed5e50d171df6798c.json  query-0d9400016c3ed4b5a3cbade0a8ce873eca1273446718e2c809e459700b0f83de.json  query-0dec8702d05cb448acf44b82d874d0658242e634fea36c2da1f4d1719c4430b6.json  (+657 more)
benches/: xdr_parser.rs
cngn-dashboard/: dashboard.js  index.html  styles.css
config/: audit_ledger.toml  distributed_api.toml  patroni.yml
docs/: MULTISIG_GOVERNANCE.md
examples/: audit_ledger_example.rs
lighthouse-test-app/: lighthouse.test.js  package.json
migrations/: 20240324000001_create_token_registry.sql  20240324_create_oauth_scopes.sql  20250101120001_create_notification_history.up.sql  20260325000002_stellar_confirmation_worker.sql  20260326000002_transaction_history_indexes.sql  20260327000003_db_optimisations.sql  20260328300001_reconciliation_worker.sql  20260328300002_reserve_vault_schema.sql  20260328300003_transparency_portal.sql  20260330000001_emergency_intervention_schema.sql  20260330000002_liquidity_monitor_schema.sql  20260330000003_liquidity_pool_architecture.sql  20260330000004_proof_of_reserves.sql  20260403000001_mint_priority_scheduling.sql  20260423000000_dex_market_maker.sql  20260423000000_oracle_price_feed.sql  20260423000000_proof_of_reserves_por.sql  20260423100000_merchant_multisig_treasury_controls.sql  20260424000000_ha_sharding_metadata.sql  20260424000001_create_merchants_table.sql  20260424000002_merchant_payment_intents.sql  20260424010000_merchant_loyalty_rewards.sql  20260424015000_merchant_webhook_deliveries.sql  20260424020000_async_webhook_delivery.sql  20260428000001_sanctions_screening_engine.sql  20260428100000_sar_workflow.sql  20260429020000_shard_registry.sql  20260501100000_lp_onboarding_schema.sql  20260601000006_database_scaling_shard_registry.sql  20261215000001_redemption_flow_schema.sql  20270201000000_merchant_crm_schema.sql  20270201000000_wallet_architecture.sql  20270201000001_multisig_governance.sql  20270202000000_merchant_invoicing_tax_schema.sql  20270203000000_multi_store_franchise_schema.sql  20270204000000_wallet_provisioning_schema.sql  20270301000000_pos_qr_payment_system.sql  20270401000000_agent_cfo_schema.sql  20270401000000_autonomous_bargaining_protocol.sql  20270401000000_dispute_resolution_schema.sql  (+9 more)
scripts/: setup_audit_ledger.sh  verify_audit_chain.sh
src/: error.rs  health.rs  lib.rs  main.rs
tests/: api_key_integration.rs  api_rates_test.rs  audit_ledger_integration.rs  auth_api_test.rs  banking_integration.rs  bug_bounty_integration.rs  cache_integration_tests.rs  commission_engine_test.rs  dispute_resolution_tests.rs  exchange_rate_service_test.rs  fee_calculation_test.rs  kya_integration.rs  liquidity_integration.rs  por_integration.rs  (+11 more)
(+288 files in other folders)
