[package]
name = "Aframp-backend"
version = "0.1.0"
edition = "2021"
autotests = false
autoexamples = false

[lib]
name = "aframp_backend"
crate-type = ["cdylib", "rlib"]

# ---------------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------------
[features]
default = []
integration = []
database = [
    "dep:tokio", "dep:async-trait", "dep:uuid", "dep:chrono",
    "dep:serde", "dep:serde_json",
    "dep:tracing", "dep:tracing-subscriber",
    "dep:axum", "dep:tower", "dep:tower-http", "dep:http",
    "dep:sqlx",
    "dep:hmac", "dep:sha2", "dep:hex",
    "dep:bigdecimal", "dep:rust_decimal", "dep:rust_decimal_macros",
    "dep:regex",
    "dep:stellar-strkey", "dep:ed25519-dalek", "dep:stellar-xdr",
    "dep:utoipa", "dep:utoipa-swagger-ui",
    "dep:argon2", "dep:rand", "dep:bcrypt",
    "dep:totp-rs", "dep:webauthn-rs", "dep:sha1",
    "dep:jsonwebtoken",
    "dep:aes-gcm", "dep:p384", "dep:elliptic-curve", "dep:hkdf", "dep:zeroize",
    "dep:openssl",
    "dep:redis", "dep:bb8", "dep:bb8-redis", "dep:moka", "dep:prometheus", "dep:tokio-util",
    "dep:rsa",
    "dep:maxminddb",
    "dep:rcgen",
    "dep:lettre",
]
cache = ["dep:redis", "dep:bb8", "dep:bb8-redis", "dep:moka", "dep:prometheus", "dep:tokio-util", "database"]
telemetry = [
    "database",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-http",
    "dep:tracing-opentelemetry",
]

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
[dependencies]

# --- Soroban / Stellar smart-contract SDK ---
soroban-sdk    = "21.0.0"
stellar_sdk    = "0.1.4"
stellar-strkey = { version = "0.0.16", optional = true }
ed25519-dalek  = { version = "2.1.1",  optional = true }
stellar-xdr    = { version = "25.0.0", features = ["next", "base64"], optional = true }

# --- Web framework ---
axum       = { version = "0.8.8", optional = true }
tower      = { version = "0.4",   features = ["util"], optional = true }
tower-http = { version = "0.5",   features = ["trace", "request-id", "cors"], optional = true }
http       = { version = "1.0",   optional = true }

# --- Async runtime ---
tokio       = { version = "1.36", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
futures     = "0.3.30"

# --- Serialisation ---
serde      = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# --- Database ---
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "rust_decimal", "ipnetwork"], optional = true }

# --- Cache ---
moka      = { version = "0.12", features = ["future"], optional = true }
tokio-util = { version = "0.7", optional = true }
redis     = { version = "1.0.2",  features = ["tokio-comp", "connection-manager"], optional = true }
bb8       = { version = "0.9.1",  optional = true }
bb8-redis = { version = "0.26.0", optional = true }

# --- Types ---
uuid         = { version = "1.6",  features = ["v4", "serde"], optional = true }
chrono       = { version = "0.4",  features = ["serde"], optional = true }
bigdecimal   = { version = "0.4",  features = ["serde"], optional = true }
rust_decimal = { version = "1.36", optional = true }
rust_decimal_macros = { version = "1.36", optional = true }
regex        = { version = "1.12.2", optional = true }
chrono-tz    = "0.9"

# --- Crypto ---
hmac           = { version = "0.12", optional = true }
argon2         = { version = "0.5",  optional = true }
rand           = { version = "0.8",  features = ["std"], optional = true }
sha2           = { version = "0.10", optional = true }
hex            = { version = "0.4",  optional = true }
bcrypt         = { version = "0.15", optional = true }
sha1           = { version = "0.10", optional = true }
aes-gcm        = { version = "0.10", optional = true }
p384           = { version = "0.13", features = ["ecdh", "pem"], optional = true }
elliptic-curve = { version = "0.13", optional = true }
hkdf           = { version = "0.12", optional = true }
zeroize        = { version = "1.7",  features = ["derive"], optional = true }
openssl        = { version = "0.10", features = ["vendored"], optional = true }

# --- Auth ---
totp-rs      = { version = "5.1", optional = true }
webauthn-rs  = { version = "0.5", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
rsa          = { version = "0.9",  features = ["sha2", "pem"], optional = true }
rcgen        = { version = "0.12", optional = true }

# --- Email ---
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"], optional = true }

# --- HTTP client ---
reqwest = { version = "0.13.1", features = ["json"] }

# --- Config / environment ---
config  = "0.15.19"
dotenv  = "0.15.0"
base64  = "0.22.1"

# --- Error handling ---
anyhow    = "1.0.100"
thiserror = "2.0.18"

# --- Zero-copy XDR parsing ---
zerocopy = { version = "0.7.35", features = ["derive"] }
bytes    = "1.6.0"

# --- Nigerian bank account validation ---
nuban    = "1.1.0"
csv      = "1.3"
serde_yaml = "0.9"

# --- OpenAPI / Swagger UI ---
utoipa            = { version = "5", features = ["axum_extras", "uuid", "chrono"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# --- Prometheus metrics ---
prometheus  = { version = "0.13", features = ["process"], optional = true }
lazy_static = "1.4"

# --- GeoIP ---
maxminddb = { version = "0.24", optional = true }

# --- Misc ---
hostname      = "0.4"
once_cell     = "1.21.4"
crossbeam-channel = "0.5"

# --- Tracing ---
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"], optional = true }

# --- OpenTelemetry ---
opentelemetry                    = { version = "0.22", features = ["trace"], optional = true }
opentelemetry_sdk                = { version = "0.22", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp               = { version = "0.15", features = ["tonic", "trace", "grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.14", optional = true }
opentelemetry-http               = { version = "0.11", optional = true }
tracing-opentelemetry            = { version = "0.23", optional = true }

# ---------------------------------------------------------------------------
# Binaries
# ---------------------------------------------------------------------------
[[bin]]
name = "Aframp-Backend"
path = "src/main.rs"
required-features = ["database"]

# ---------------------------------------------------------------------------
# Tests (only those whose source modules still exist)
# ---------------------------------------------------------------------------
[[test]]
name = "aml_integration_tests"
path = "tests/aml_integration_tests.rs"
required-features = ["database"]

[[test]]
name = "fee_calculation_test"
path = "tests/fee_calculation_test.rs"
required-features = ["database"]

[[test]]
name = "multi_region_tests"
path = "tests/multi_region_tests.rs"
required-features = ["database"]

[[test]]
name = "tracing_integration"
path = "tests/tracing_integration.rs"

[[test]]
name = "api_key_integration"
path = "tests/api_key_integration.rs"
required-features = ["integration"]

[[test]]
name = "key_rotation_integration"
path = "tests/key_rotation_integration.rs"
required-features = ["database"]

[[test]]
name = "hmac_signing_test"
path = "tests/hmac_signing_test.rs"
required-features = ["database"]

[[test]]
name = "gateway_integration"
path = "tests/gateway_integration.rs"
required-features = ["database"]

[[test]]
name = "cache_integration_tests"
path = "tests/cache_integration_tests.rs"
required-features = ["cache"]

[[test]]
name = "ip_detection_integration"
path = "tests/ip_detection_integration.rs"
required-features = ["cache"]

[[test]]
name = "issuer_account_integration"
path = "tests/issuer_account_integration.rs"
required-features = ["database"]

[[test]]
name = "payload_encryption_test"
path = "tests/payload_encryption_test.rs"
required-features = ["database"]

[[test]]
name = "key_management_test"
path = "tests/key_management_test.rs"
required-features = ["database"]

[[test]]
name = "analytics_integration"
path = "tests/analytics_integration.rs"
required-features = ["database"]

[[test]]
name = "wallet_unit_tests"
path = "tests/wallet_unit_tests.rs"
required-features = ["database"]

[[test]]
name = "wallet_analytics_test"
path = "tests/wallet_analytics_test.rs"
required-features = ["database"]

[[test]]
name = "rate_engine_tests"
path = "tests/rate_engine_tests.rs"
required-features = ["cache"]

[[test]]
name = "rate_limit_test"
path = "tests/rate_limit_test.rs"
required-features = ["cache"]

[[test]]
name = "request_integrity_test"
path = "tests/request_integrity_test.rs"
required-features = ["database"]

[[test]]
name = "signature_verification_test"
path = "tests/signature_verification_test.rs"
required-features = ["database"]

[[test]]
name = "api_rates_test"
path = "tests/api_rates_test.rs"
required-features = ["database"]

# ---------------------------------------------------------------------------
# Examples
# ---------------------------------------------------------------------------
[[example]]
name = "rates_api_demo"
path = "examples/rates_api_demo.rs"
required-features = ["database", "cache"]

[[example]]
name = "stellar_demo"
path = "examples/stellar_demo.rs"
required-features = ["database"]

# ---------------------------------------------------------------------------
# Dev dependencies
# ---------------------------------------------------------------------------
[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
wiremock    = "0.6"
serde_json  = "1.0"
hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"
tokio       = { version = "1.49.0", features = ["full"] }
tokio-test  = "0.4"
bigdecimal  = "0.4"
proptest    = "1.4"
base64      = "0.22.1"
uuid        = { version = "1.6", features = ["v4"] }
